enable npm start command

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "An Express API for the CMU T&E website",
   "main": "app.js",
   "scripts": {
-    "test": "npm test"
+    "test": "npm test",
+    "start": "node app.js"
   },
   "repository": {
     "type": "git",
