--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/jeffjxu/cmute-website-api#readme",
   "dependencies": {
+    "airtable": "^0.11.1",
     "express": "^4.17.1"
   }
 }
