--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/jeffjxu/cmute-website-api#readme",
   "dependencies": {
     "airtable": "^0.11.1",
+    "body-parser": "^1.19.0",
     "express": "^4.17.1"
   }
 }
